[gd_scene load_steps=2 format=3 uid="uid://dy7yoqtfdehat"]

[ext_resource type="Script" uid="uid://7okbsrsj1b0h" path="res://network_menu.gd" id="1_0diwc"]

[node name="NetworkMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0diwc")

[node name="PlayerName" type="LineEdit" parent="."]
layout_mode = 2
offset_top = 70.0
offset_right = 68.5625
offset_bottom = 101.0
placeholder_text = "Player name"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinSettings" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="VBoxContainer/JoinSettings"]
layout_mode = 2
text = "Join"

[node name="StartGame" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "StartGame"

[node name="HostSettings" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
